fixed navbar on smaller screen

--- a/app/globals.css
+++ b/app/globals.css
@@ -67,3 +67,33 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* mobile nav styling begins */
+.nav {
+  width: 300px;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 300px;
+  height: 100vh;
+  z-index: 9999;
+}
+
+.mobile-nav-btn {
+  outline: none;
+  border: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  position: absolute;
+  top: 16px;
+  right: 2px;
+  width: 50px;
+  height: 50px;
+  background: transparent;
+}
+/* mobile nav styling ends */
